--- a/Coding Environment/Coding Environment.vcxproj
+++ b/Coding Environment/Coding Environment.vcxproj
@@ -96,7 +96,14 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Source\Debug1.cpp" />
+    <ClCompile Include="..\Source\Debug2.cpp" />
+    <ClCompile Include="..\Source\Debug3.cpp" />
+    <ClCompile Include="..\Source\Debug4.cpp" />
+    <ClCompile Include="..\Source\Debug5.cpp" />
+    <ClCompile Include="..\Source\Debug6.cpp" />
     <ClCompile Include="..\Source\Graphics.cpp" />
+    <ClCompile Include="..\Source\Input.cpp" />
     <ClCompile Include="..\Source\Main.cpp" />
     <ClCompile Include="..\Source\GameStateManager.cpp" />
     <ClCompile Include="..\Source\MainMenu.cpp" />
@@ -104,9 +111,11 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
     <ClCompile Include="..\Source\System.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Source\DebugMenus.h" />
     <ClInclude Include="..\Source\GameStateList.h" />
     <ClInclude Include="..\Source\GameStateManager.h" />
     <ClInclude Include="..\Source\Graphics.h" />
+    <ClInclude Include="..\Source\Input.h" />
     <ClInclude Include="..\Source\MainMenu.h" />
     <ClInclude Include="..\Source\MasterHeader.h" />
     <ClInclude Include="..\Source\System.h" />
