--- a/Coding Environment/Coding Environment.vcxproj
+++ b/Coding Environment/Coding Environment.vcxproj
@@ -96,6 +96,7 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Source\Computation.cpp" />
     <ClCompile Include="..\Source\Debug1.cpp" />
     <ClCompile Include="..\Source\Debug2.cpp" />
     <ClCompile Include="..\Source\Debug3.cpp" />
@@ -111,6 +112,7 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
     <ClCompile Include="..\Source\System.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Source\Computation.h" />
     <ClInclude Include="..\Source\DebugMenus.h" />
     <ClInclude Include="..\Source\GameStateList.h" />
     <ClInclude Include="..\Source\GameStateManager.h" />
