--- a/Coding Environment/Coding Environment.vcxproj.filters
+++ b/Coding Environment/Coding Environment.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="..\Source\Computation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\Animations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\GameStateManager.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Animations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
