world stuff + others
fixed enemy hp bar drawing over our hud bar
added new files for world generation
added temporary grass texture for world border
simple collison between tank and border for now

--- a/Coding Environment/Coding Environment.vcxproj
+++ b/Coding Environment/Coding Environment.vcxproj
@@ -113,6 +113,7 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
     <ClCompile Include="..\Source\Player.cpp" />
     <ClCompile Include="..\Source\SoloProj.cpp" />
     <ClCompile Include="..\Source\System.cpp" />
+    <ClCompile Include="..\Source\World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Animations.h" />
@@ -128,6 +129,7 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
     <ClInclude Include="..\Source\Player.h" />
     <ClInclude Include="..\Source\Structs.h" />
     <ClInclude Include="..\Source\System.h" />
+    <ClInclude Include="..\Source\World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
